# stalks_evdev

./: CMakeLists.txt  README.md  info.txt
src/: globals.cpp  globals.h  input.cpp  main.cpp  telemetry.cpp
test/: 61-by-id-for-uinput.rules  test.cpp
